# ITMO-DataEngineering-Course

./: README.md  pyproject.toml
hw1/: README.md  pyproject.toml
hw1/notebook/: hw1.ipynb
hw2/: README.md  pyproject.toml
hw2/hw_notebook/: .gitignore  hw2.ipynb
hw3/: README.md  pyproject.toml
hw3/hw_notebook/: .gitignore  hw3.ipynb
hw4/: README.md
