[tool.poetry]
name = "hw_notebook"
version = "1.0.0"
description = "HW1 - Data collection | ITMO University Data Engineering Course"
authors = ["Daniel Kopecky <danielkopecky@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
